* Fixed 1264, account numbers out of place on PNL (Chris T)
* Fixed 1268, name not clickable on customer/vendor searches (Chris T)
* Fixed 1274, error on posting payment reversals w. dd/mm/yyy dates (Chris T)
* Fixed 1227, 1252, added batch printing via batches (Chris T)
* Fixed bug 1275, post error due to trying to double encode arry (Chris T)

Chris T is Chris Travers

Changelog for 1.4.6
* Fixed bug 1259, id from new_shipto overwrites form-id (Pongracz I)
* Fixed related bug to 1259 on invoices (Chris T)
* Updated Dutch translation (Frans S and Erik H)
* New returns-specific logic (see release notes) (Chris T)
* Fixed bug 1262, cannot post overpayment with formatted nums (Chris T)
* Fixed bug 1263, error when control_code not filled in (chris T)
* Fixed update button not showing after save (Chris T)
* Fixed bug 1260, Multiple vendor skus breaks display of invoice (Chris T)
* Removed buggy batch printing interface (Chris T)
* Added search for approved batches (Chris T)

Pongracz I is Pongracz Istvan
Chris T is Chris Travers
Frans S is Frans van der Star
Erik H is Erik Huelsmann

Changelog for 1.4.5
* Fixed bug 1245, print and email buttons lost after email invoice (Chris T)
* Fixed bug 1246, entity-level addresses do not show on invoice (Chris T)
* Fixed bug 1244, manually entered tax crashes invoice on edit (Chris T)
* Fixed bug 1253, report pdfs redirect to port 80 (Chris T)
* Fixed internal server error on single payment interface (Chris T)
* Adding tax_id hidden field to order and offer forms to be able to include it on tex templates (Pongracz I)
* Fixed bug 1195, goods and services w/invoice search useless (Chris T)
* Fixed bug 1247, cannot save shipping record (Chris T)
* Fixed bug 1255, no such function timecard__report (Chris T)
* Fixed bug 1256, No such function: inventory_get_item_at_day (Chris T)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan

Changelog for 1.4.4
* Fixed bug 1225 error saving order/quote for natural persons (Chris T)